# anymind

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.beads/: issues.jsonl
config/: mcp_servers.json  model.bedrock.json  model.json  model.ollama.json  model.openai.json  pricing.json  sop_ai_cyber_news_past_week_v1.json  sop_ai_research_newsletter_weekly_v1.json
docs/: architecture.md  getting-started.md  reference.md
docs/adr/: 001-provider-agnostic-design.md  002-reasoning-topologies.md  003-sop-vs-research-orchestrations.md
newsletters/: 2026-03-22.md  2026-03-29.md  2026-04-13.md  2026-04-19.md
onnx_assets/: build.py  config.json
reports/: sop_agent_c2978_tool_messages.jsonl  sop_agent_token_report.md
scripts/: test_internet_search.py  test_sop_nodes.py
src/anymind/agents/: agot_agent.py  aiot_agent.py  base.py  bedrock_middleware.py  chat_agent.py  giot_agent.py  got_agent.py  iot_prompts.py  iot_utils.py  research_director_agent.py  sop_agent.py  tool_agent_pool.py  usage_tracker.py
src/anymind/agents/agot/: __init__.py  algorithm.py  heritage.py  mappings.py  nested_graph.py  prompts.py  tasks.py  validators.py
src/anymind/agents/got/: __init__.py  algorithm.py  prompts.py  validators.py
src/anymind/agents/research_director/: __init__.py  brain_selector.py  prompts.py
src/anymind/agents/sop/: __init__.py  brain_selector.py  builtins.py  coverage_gate.py  sop_executor.py  sop_optimizer.py  sop_runtime_updates.py  sop_validation.py
src/anymind/api/: app.py
src/anymind/cli/: main.py
src/anymind/config/: loader.py  schemas.py
src/anymind/policies/: tool_policy.py
src/anymind/runtime/: __init__.py  agent_registry.py  cache.py  checkpoints.py  citations.py  evidence.py  jobs.py  json_parser.py  json_validation.py  llm_errors.py  llm_factory.py  llm_logging.py  logging.py  mcp_registry.py  messages.py  onnx_embedder.py  orchestrator.py  session.py  session_context.py  session_factory.py  session_store.py  session_usage.py  tool_selection.py  tool_validation.py  turn_runner.py  usage.py  usage_store.py  validated_json.py  validation_prompts.py
src/anymind/tools/: core_http.py  core_pdf.py  core_search.py  core_text.py  core_time.py  core_tools.py  mcp_local_tools.py
tests/: test_cache.py  test_citations_and_session_context.py  test_config_loader.py  test_core_tools.py  test_evidence.py  test_iot_utils.py  test_iot_utils_additional.py  test_json_parser.py  test_json_parser_additional.py  test_json_validation.py  test_llm_errors.py  test_llm_errors_additional.py  test_llm_factory_guard.py  test_mcp_registry.py  test_session.py  test_smoke.py  test_tool_policy.py  test_tool_policy_additional.py  test_tool_selection.py  test_usage_and_config.py  test_usage_store.py
