[tool.poetry]
name = "anymind"
version = "0.1.0"
description = "LangGraph-based multi-agent runtime with MCP tools, CLI, and API."
readme = "README.md"
authors = ["AnyMind"]
license = "Apache-2.0"
packages = [{ include = "anymind", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiosqlite = ">=0.19.0"
fastapi = ">=0.115.0"
boto3 = ">=1.34.0"
langchain = ">=0.2.12"
langchain-aws = ">=0.1.8"
langchain-anthropic = ">=0.1.20"
langchain-mcp-adapters = ">=0.0.10"
langchain-ollama = ">=0.1.0"
langchain-openai = ">=0.2.6"
langgraph = ">=0.2.35"
mcp = ">=1.2.0"
pydantic = ">=2.6.0"
pydantic-settings = ">=2.2.1"
pypdf = ">=4.2.0"
numpy = ">=1.26.0"
onnxruntime = ">=1.17.0"
tokenizers = ">=0.15.0"
rich = ">=13.7.0"
redis = ">=5.0.0"
structlog = ">=24.1.0"
typer = ">=0.12.0"
uvicorn = ">=0.30.0"
langgraph-checkpoint-sqlite = "^3.0.3"

[tool.poetry.group.dev.dependencies]
black = ">=24.4.0"
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.6"
bandit = ">=1.7.8"
pip-audit = ">=2.7.3"
pre-commit = ">=3.7.0"

[tool.poetry.scripts]
anymind = "anymind.cli.main:app"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
