[tool.poetry]
name = "anymind"
version = "0.1.0"
description = "LangGraph-based multi-agent runtime with MCP tools, CLI, and API."
readme = "README.md"
authors = ["AnyMind"]
license = "Apache-2.0"
packages = [{ include = "anymind", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiosqlite = ">=0.19.0"
fastapi = ">=0.115.0"
boto3 = ">=1.34.0"
langchain = ">=0.2.12"
langchain-aws = ">=0.1.8"
langchain-anthropic = ">=0.1.20"
langchain-mcp-adapters = ">=0.0.10"
langchain-ollama = ">=0.1.0"
langchain-openai = ">=0.2.6"
langgraph = ">=1.0.10,<1.1.0"
mcp = ">=1.2.0"
pydantic = ">=2.6.0"
pydantic-settings = ">=2.2.1"
pypdf = ">=6.7.5"
numpy = ">=1.26.0"
onnxruntime = ">=1.17.0"
tokenizers = ">=0.15.0"
rich = ">=13.7.0"
redis = ">=5.0.0"
structlog = ">=24.1.0"
typer = ">=0.12.0"
uvicorn = ">=0.30.0"
langgraph-checkpoint-sqlite = "^3.0.3"
json-repair = ">=0.25.0"
cryptography = ">=46.0.5"
langchain-core = ">=1.2.11"

[tool.poetry.group.dev.dependencies]
black = ">=24.4.0"
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.6"
bandit = ">=1.7.8"
pip-audit = ">=2.7.3"
pre-commit = ">=3.7.0"
pytest-cov = "^7.0.0"

[tool.poetry.group.onnx.dependencies]
torch = ">=2.2.0"
transformers = ">=4.41.0"
onnx = ">=1.16.0"
onnxscript = ">=0.3.0"

[tool.poetry.scripts]
anymind = "anymind.cli.main:app"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["anymind"]
omit = [
    "src/anymind/api/*",
    "src/anymind/cli/*",
    "src/anymind/graphs/*",
    "src/anymind/tools/*",
    "src/anymind/agents/*_agent.py",
    "src/anymind/agents/agot/*",
    "src/anymind/agents/got/*",
    "src/anymind/agents/sop/*",
    "src/anymind/agents/research_director/*",
    "src/anymind/agents/bedrock_middleware.py",
    "src/anymind/agents/tool_agent_pool.py",
    "src/anymind/agents/usage_tracker.py",
    "src/anymind/agents/base.py",
    "src/anymind/runtime/agent_registry.py",
    "src/anymind/runtime/checkpoints.py",
    "src/anymind/runtime/jobs.py",
    "src/anymind/runtime/llm_factory.py",
    "src/anymind/runtime/llm_logging.py",
    "src/anymind/runtime/logging.py",
    "src/anymind/runtime/onnx_embedder.py",
    "src/anymind/runtime/orchestrator.py",
    "src/anymind/runtime/session_factory.py",
    "src/anymind/runtime/session_store.py",
    "src/anymind/runtime/session_usage.py",
    "src/anymind/runtime/tool_validation.py",
    "src/anymind/runtime/turn_runner.py",
    "src/anymind/runtime/validated_json.py",
    "src/anymind/runtime/validation_prompts.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B310"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
